# Rational-Root-Parity

./: .gitignore  CMakeLists.txt  LICENSE  README.md  intersections.mw
cmake/: ECCDDownloadExternal.cmake
src/: ECCD.cpp  ECCD.hpp  Plots.cpp  Plots.hpp  Utils.cpp  Utils.hpp  main.cpp
tests/: CMakeLists.txt  ExactCCDTests.cpp
